--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,4 +17,9 @@ dev_dependencies:
   flutter_lints: ^5.0.0
 
 flutter:
+  assets:
+    - assets/oi1.png
+    - assets/oi2.png
+    - assets/oi3.png
+    - assets/oi4.png
   uses-material-design: true
