--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   go_router: ^14.0.0
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
   flutter_test:
