--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
     sdk: flutter
   go_router: ^14.0.0
   shared_preferences: ^2.2.0
+  path_provider: ^2.1.0
+  image_picker: ^1.0.0
 
 dev_dependencies:
   flutter_test:
